@@ -1,0 +1,3 @@
+[Timeseries]
+strftime = %c
+
