@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** February 01, 2011 **
+The timeseries and menu plugins have been enhanced.
+
 ** January 28, 2011 **
 Fixed a bug introduced in the CSV plugin in r220.
 
